--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,15 @@
             <version>5.1.35</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-streaming -->
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>2.2.0</version>
+            <!--<scope>provided</scope>-->
+        </dependency>
+
+
 
 
     </dependencies>
